syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/priviledges/transfer_auth";

import "cosmos_proto/cosmos.proto";

message QueryWhitelistedAddressesRequest {
    string token_id = 1;
}

message QueryWhitelistedAddressesResponse {
    repeated string whitelisted_addrs = 1;
}

message QueryIsAddressWhitelistedRequest {
    string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

message QueryIsAddressWhitelistedRespones {
    bool is_whitelisted = 1;
}